--- a/pages/confirmation.html
+++ b/pages/confirmation.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
-    <script src="https://kit.fontawesome.com/746b2bc6da.js" crossorigin="anonymous"></script>
+
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -61,7 +61,7 @@
             </div>
         </div>
     </nav>
-    <main id="productlist" class="row d-flex justify-content-center">
+    <main class="row d-flex justify-content-center">
         <div class="col-sm-6 col-md-4  ">
             <section class="confirmation-section">
                 <!-- Contenu généré par le javascript (confirmation.js) -->
@@ -106,7 +106,7 @@
 
     <script src="../script/confirmation.js"></script>
     <script src="../script/components.js"></script>
-
+    <script src="https://kit.fontawesome.com/746b2bc6da.js" crossorigin="anonymous"></script>
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
