--- a/pages/panier.html
+++ b/pages/panier.html
@@ -64,7 +64,7 @@
 
 
         </table>
-        <p class="">Veuillez remplir le formulaire suivant afin de valider la commande : </p>
+        <!-- <p class="">Veuillez remplir le formulaire suivant afin de valider la commande : </p>
         <form class="cart-form" method="post">
           <div class="cart-form__group">
             <label for="firstname">Prénom : </label>
@@ -89,7 +89,7 @@
               placeholder="exemple@email.com" maxlength="30" required />
           </div>
           <button type="submit" id="submit-btn">Valider le panier</button>
-        </form>
+        </form> -->
         <!-- <p class="">Veuillez remplir le formulaire suivant afin de valider la commande : </p>
         <form class="cart-form" action="post" type="submit">
           <div class="cart-form__group">
@@ -115,31 +115,31 @@
               placeholder="exemple@email.com" maxlength="30" required />
           </div>
           <button id="submit-btn">Valider le panier</button>
-        </form>
+        </form>-->
 
       </div>
-    </div> -->
+    </div>
 
 
-        <!--     MY SCRIPT FRONT    -->
+    <!--     MY SCRIPT FRONT    -->
 
-        <script src="../script/panier.js"></script>
-        <script src="../script/components.js"></script>
+    <script src="../script/panier.js"></script>
+    <script src="../script/components.js"></script>
 
 
-        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
-        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-          integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
-          </script>
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+      </script>
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-          integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-          </script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-          integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
-          </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+      </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+      </script>
 </body>
 
 </html>
