--- a/pages/panier.html
+++ b/pages/panier.html
@@ -4,13 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../css/style.css">
-  <script src="https://kit.fontawesome.com/746b2bc6da.js" crossorigin="anonymous"></script>
+
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <title>Orinoco</title>
 </head>
+<!-- onload="alert('body onload')" -->
 
 <body class="font-weight-light text-secondary">
   <nav class="nav-bg-color navbar navbar-expand-lg navbar-light py-lg-1">
@@ -51,96 +52,70 @@
         <li class="nav-item">
         </li>
       </ul>
-    </div>
+
     </div>
   </nav>
 
-  <div class="container mb-4">
-    <div class="row">
-      <div class="col-12">
 
 
-        <table class="table table-striped jumbotron text-center  section cart-section addToCart">
+
+  <section class="text-center  section cart-section addToCart">
 
 
-        </table>
-        <!-- <p class="">Veuillez remplir le formulaire suivant afin de valider la commande : </p>
-        <form class="form1" method="post">
-          <br>
-          <input class="form-control" id="firstname" type="text" placeholder="Votre prénom" maxlength="30"
-            pattern="[A-Za-z]{2,}" required />
-
-          <br>
-
-          <input class="form-control" id="name" type="text" placeholder="Votre nom" maxlength="50"
-            pattern="[A-Za-z]{2,}" required />
-
-          <br>
-
-          <input class="form-control" id="address" type="text" placeholder="Votre adresse" maxlength="200" required />
-
-          <br>
-
-          <input class="form-control" id="city" type="text" placeholder="Votre ville" maxlength="30" required />
+  </section>
 
 
-          <br>
-          <input class="form-control" id="email" type="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+[.][a-z]{2,4}"
-            placeholder="exemple@email.com" maxlength="30" required />
-          <br>
 
-          <button type="submit" id="submit-btn">Valider le panier</button>
-        </form> -->
-        <!-- <p class="">Veuillez remplir le formulaire suivant afin de valider la commande : </p>
-        <form class="cart-form" action="post" type="submit">
-          <div class="cart-form__group">
-            <label for="firstname">Prénom : </label>
-            <input id="firstname" type="text" placeholder="Votre prénom" maxlength="30" pattern="[A-Za-z]{2,}"
-              required />
-          </div>
-          <div class="cart-form__group">
-            <label for="name">Nom : </label>
-            <input id="name" type="text" placeholder="Votre nom" maxlength="50" pattern="[A-Za-z]{2,}" required />
-          </div>
-          <div class="cart-form__group">
-            <label for="address">Adresse : </label>
-            <input id="address" type="text" placeholder="Votre adresse" maxlength="200" required />
-          </div>
-          <div class="cart-form__group">
-            <label for="city">Ville : </label>
-            <input id="city" type="text" placeholder="Votre ville" maxlength="30" required />
-          </div>
-          <div class="cart-form__group">
-            <label for="email">Email : </label>
-            <input id="email" type="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+[.][a-z]{2,4}"
-              placeholder="exemple@email.com" maxlength="30" required />
-          </div>
-          <button id="submit-btn">Valider le panier</button>
-        </form>-->
-
+  <!--     FOOTER     -->
+  <footer class=" container-fluid nav-bg-color mt-5 pt-4">
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <ul class="list-inline list-unstyled text-center">
+            <li class="list-inline-item">
+              <a class="" href="#">A propos de nous</a>
+            </li>
+            <li class="list-inline-item">
+              <p>.</p>
+            </li>
+            <li class="list-inline-item">
+              <a class="" href="#">Nous contacter</a>
+            </li>
+            <li class="list-inline-item">
+              <p>.</p>
+            </li>
+            <li class="list-inline-item">
+              <a class="" href="#">Conditions d'utilisation</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
+    </main>
+  </footer>
 
 
-    <!--     MY SCRIPT FRONT    -->
 
-    <script src="../script/panier.js"></script>
-    <script src="../script/components.js"></script>
+  <!--     MY SCRIPT FRONT    -->
+  <script src="https://kit.fontawesome.com/746b2bc6da.js" crossorigin="anonymous"></script>
+  <script src="../script/panier.js"></script>
+  <script src="../script/components.js"></script>
 
 
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
-      </script>
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+    </script>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-      </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
-      </script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+    </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+    </script>
+
 </body>
 
 </html>
