--- a/pages/confirmation.html
+++ b/pages/confirmation.html
@@ -46,6 +46,8 @@
                     </li>
                 </ul>
             </div>
+            <!-- #region -->
+        </div>
     </nav>
     <main class="row d-flex justify-content-center">
         <div class="col-sm-6 col-md-4  ">
@@ -54,10 +56,6 @@
             </section>
         </div>
     </main>
-    </div>
-    <!-- Contenu généré par le javascript (product.js) -->
-    <!-- </section>
-      </main> -->
     <!-- FOOTER -->
     <footer class="container-fluid nav-bg-color mt-5 pt-4">
         <div class="container">
@@ -83,7 +81,7 @@
                 </div>
             </div>
         </div>
-        </main>
+
     </footer>
     <!--     MY SCRIPT FRONT    -->
     <script src="../script/confirmation.js"></script>
